implement localization for realty module

--- a/src/app/realty/realty-add/realty-add.component.html
+++ b/src/app/realty/realty-add/realty-add.component.html
@@ -19,7 +19,7 @@
 
         <div fxLayout="column" fxLayoutAlign="start start">
           <div class="subtitle secondary-text">
-            <span>Realty Add</span>
+            <span>{{'realty.add.title' | translate}}</span>
           </div>
         </div>
       </div>
