--- a/src/app/realty/realty-edit/realty-edit.component.html
+++ b/src/app/realty/realty-edit/realty-edit.component.html
@@ -19,7 +19,7 @@
 
         <div fxLayout="column" fxLayoutAlign="start start">
           <div class="subtitle secondary-text">
-            <span>Realty Edit</span>
+            <span>{{'realty.edit.title' | translate}}</span>
           </div>
         </div>
       </div>
