--- a/src/app/realty/realty-list.component.html
+++ b/src/app/realty/realty-list.component.html
@@ -1,11 +1,11 @@
 <div id="realty-list">
   <div class="header mat-primary-bg p-24 h-100 " fxLayout="row" fxLayoutAlign="space-between center">
-    <div class="h2">Realty</div>
+    <div class="h2">{{'realty.title' | translate}}</div>
     <div (click)="openFilterModal()" class="filter-btn h3">
       <fa-icon [icon]="['fas','filter']">Filter</fa-icon>
-      <span>Filter</span>
+      <span>{{'realty.filter.title' | translate}}</span>
     </div>
-    <mat-icon color="white" class="hovered" routerLink="/realty/add" matTooltip="Add realty">add</mat-icon>
+    <mat-icon color="white" class="hovered" routerLink="/realty/add" [matTooltip]="'realty.add.title' | translate">add</mat-icon>
   </div>
   <div fxLayoutAlign="space-between">
     <div class="realty-container card" fxLayout="row wrap" fxLayoutAlign.xs="center" infiniteScroll
