--- a/src/app/realty/realty-filter-dialog/realty-filter-dialog.component.html
+++ b/src/app/realty/realty-filter-dialog/realty-filter-dialog.component.html
@@ -1,21 +1,21 @@
-<h2 mat-dialog-title class="text-center mat-primary-bg">Filter</h2>
+<h2 mat-dialog-title class="text-center mat-primary-bg">{{'realty.filter.title' | translate}}</h2>
 <form [formGroup]="searchForm">
   <div class="realty-filter mt-20" fxLayout="column">
     <div class="form-control" fxLayout="row" fxLayoutAlign="space-between center">
-      <span fxFlex="30">Sorting: </span>
+      <span fxFlex="30">{{'realty.filter.sorting.label' | translate}}: </span>
       <mat-form-field fxFlex="60" fxLayoutAlign="center" fxLayout="column">
-        <mat-select formControlName="sortingOrder" placeholder="Select sorting order">
-          <mat-option>None</mat-option>
-          <mat-option value="title">Title</mat-option>
-          <mat-option value="price">Price</mat-option>
+        <mat-select formControlName="sortingOrder" [placeholder]="'realty.filter.sorting.placeholder' | translate">
+          <mat-option>{{'realty.filter.sorting.none' | translate}}</mat-option>
+          <mat-option value="title">{{'realty.filter.sorting.title' | translate}}</mat-option>
+          <mat-option value="price">{{'realty.filter.sorting.price' | translate}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
     <div class="form-control" fxLayout="row" fxLayoutAlign="space-between center">
-      <span fxFlex="30">Rooms count: </span>
+      <span fxFlex="30">{{'realty.filter.rooms' | translate}}: </span>
       <mat-form-field fxFlex="60" fxLayoutAlign="center" fxLayout="column">
-        <mat-select formControlName="rooms" placeholder="Select rooms count">
-          <mat-option>None</mat-option>
+        <mat-select formControlName="rooms" [placeholder]="'realty.fields.rooms' | translate">
+          <mat-option>{{'realty.filter.sorting.none' | translate}}</mat-option>
           <mat-option [value]="1">1</mat-option>
           <mat-option [value]="2">2</mat-option>
           <mat-option [value]="3">3</mat-option>
@@ -33,6 +33,6 @@
   </div>
 </form>
 <div fxLayout="row" fxLayoutAlign="space-around">
-  <button mat-raised-button color="gray" mat-dialog-close [mat-dialog-close]="true">Cancel</button>
-  <button mat-raised-button color="warn" mat-dialog-close>Reset</button>
+  <button mat-raised-button color="gray" mat-dialog-close [mat-dialog-close]="true">{{'buttons.cancel' | translate}}</button>
+  <button mat-raised-button color="warn" mat-dialog-close>{{'buttons.reset' | translate}}</button>
 </div>
