--- a/src/app/realty/realty/realty.component.html
+++ b/src/app/realty/realty/realty.component.html
@@ -4,7 +4,7 @@
   <div class="p-16" [routerLink]="['details',realty.id]">
     <div class="h1 title hovered">{{realty.title}}</div>
   </div>
-  <div class="ribbon"><span>{{realty.offer}}</span></div>
+  <div class="ribbon"><span>{{'realty.fields.offer.'+realty.offer | lowercase | translate}}</span></div>
   <div class="p-16 pt-0 line-height-1.75 description">
     {{realty.description}}
   </div>
@@ -12,9 +12,9 @@
   <div class="p-16" fxLayout="row" fxLayoutAlign="space-between center">
     <div class="price ">{{realty.price}} {{realty.currency}}</div>
     <fa-icon [icon]="['fas', 'building']" size="2x" *ngIf="realty.resourcetype == 'Apartment'"
-             matTooltip="Apartment"></fa-icon>
+             [matTooltip]="'realty.fields.resourcetype.apartment' | translate"></fa-icon>
     <fa-icon [icon]="['fas', 'home']" size="2x" *ngIf="realty.resourcetype == 'Building'"
-             matTooltip="Building"></fa-icon>
+             [matTooltip]="'realty.fields.resourcetype.building' | translate"></fa-icon>
     <mat-icon color="orange" class="hovered" *ngIf="!realty.liked" (click)="addToFavorite(realty)">favorite_border
     </mat-icon>
     <mat-icon color="orange" class="hovered" *ngIf="realty.liked" (click)="removeFromFavorite(realty)">favorite
