implement localization for static module

--- a/src/app/static/not-found/not-found.component.html
+++ b/src/app/static/not-found/not-found.component.html
@@ -4,9 +4,9 @@
 
     <div class="error-code">404</div>
 
-    <div class="message">Sorry but we could not find the page you are looking for</div>
+    <div class="message">{{'static.notFound.title' | translate}}</div>
 
-    <a class="back-link" [routerLink]="'/realty'">Go back to realty</a>
+    <a class="back-link" [routerLink]="'/realty'">{{'static.notFound.backLink' | translate}}</a>
 
   </div>
 
