add select language dropdown

--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -61,8 +61,27 @@
             <div class="toolbar-separator"></div>
 
             <div class="toolbar-separator"></div>
+          <button mat-button fxHide fxShow.gt-xs
+                  class="language-button"
+                  [matMenuTriggerFor]="languageMenu">
+            <div fxLayout="row" fxLayoutAlign="center center">
+              <img class="flag mr-8" [src]="'assets/images/flags/'+selectedLanguage.flag+'.png'">
+              <span class="iso text-uppercase">{{selectedLanguage.id}}</span>
+            </div>
+          </button>
 
-<!--            <button mat-button fxHide fxShow.gt-xs-->
+          <mat-menu #languageMenu="matMenu" [overlapTrigger]="false">
+
+            <button mat-menu-item *ngFor="let lang of languages" (click)="setLanguage(lang)">
+                    <span fxLayout="row" fxLayoutAlign="start center">
+                        <img class="flag mr-16" [src]="'assets/images/flags/'+lang.flag+'.png'">
+                        <span class="iso">{{'layout.toolbar.languages.' + lang.id | translate}}</span>
+                    </span>
+            </button>
+          </mat-menu>
+
+
+          <!--            <button mat-button fxHide fxShow.gt-xs-->
 <!--                    class="language-button"-->
 <!--                    [matMenuTriggerFor]="languageMenu">-->
 <!--                <div fxLayout="row" fxLayoutAlign="center center">-->
