--- a/src/app/realty/realty-filter/realty-filter.component.scss
+++ b/src/app/realty/realty-filter/realty-filter.component.scss
@@ -14,6 +14,10 @@
   padding-left: 20px;
 }
 
+.fuse-card {
+  max-width: 335px !important;
+}
+
 @media only screen and (max-width: 768px) {
   .realty-filter {
     display: none !important;
