--- a/src/app/realty/realty-form/realty-form.component.scss
+++ b/src/app/realty/realty-form/realty-form.component.scss
@@ -21,7 +21,9 @@
   position: absolute;
   right: 20px;
   color: #FFE;
-  font-size: 15px;
+  font-size: 21px;
+  width: 20px;
+  height: 25px;
   background-color: rgba(0, 0, 0, 0.5);
 
   &:hover {
