--- a/src/app/realty/realty-add/realty-add.component.html
+++ b/src/app/realty/realty-add/realty-add.component.html
@@ -1,4 +1,4 @@
-<div id="realty-add" class="page-layout carded fullwidth inner-scroll">
+<div id="realty-add" class="page-layout carded fullwidth inner-scroll scrollable">
 
   <!-- TOP BACKGROUND -->
   <div class="top-bg mat-accent-bg"></div>
