--- a/src/app/realty/realty-details/realty-details.component.html
+++ b/src/app/realty/realty-details/realty-details.component.html
@@ -1,4 +1,4 @@
-<div id="realty-details" class="page-layout carded fullwidth inner-scroll" *ngIf="realty">
+<div id="realty-details" class="page-layout carded fullwidth inner-scroll scrollable" *ngIf="realty">
 
   <!-- TOP BACKGROUND -->
   <div class="top-bg mat-accent-bg"></div>
