--- a/src/app/auth/forgot-password/forgot-password.component.scss
+++ b/src/app/auth/forgot-password/forgot-password.component.scss
@@ -7,6 +7,7 @@
         height: 100%;
         background: url('~src/assets/images/backgrounds/dark-material-bg.jpg') no-repeat;
         background-size: cover;
+      overflow: auto;
 
         #forgot-password-form-wrapper {
             flex: 1 0 auto;
