--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div id="profile" class="page-layout simple tabbed" *ngIf="profile">
+<div id="profile" class="page-layout simple tabbed scrollable" *ngIf="profile">
 
     <!-- HEADER -->
     <div class="header p-24" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-sm="row"
