--- a/src/app/realty/realty-list.component.scss
+++ b/src/app/realty/realty-list.component.scss
@@ -1,4 +1,7 @@
-
+#realty-container {
+  height: calc(100vh - 170px);
+  overflow: scroll !important;
+}
 .title:hover {
     color:orange;
   }
@@ -31,6 +34,11 @@
 .filter-btn {
   display: none;
   }
+
+.realty-filter {
+  position: sticky;
+  top: 0;
+}
 
 @media only screen and (max-width: 768px) {
   .filter-btn {
