--- a/src/app/users/users-table/users-table.component.html
+++ b/src/app/users/users-table/users-table.component.html
@@ -1,4 +1,4 @@
-<mat-table #table [dataSource]="users">
+<mat-table #table [dataSource]="users" matSort>
   <!-- Avatar Column -->
   <ng-container matColumnDef="avatar">
     <mat-header-cell *matHeaderCellDef fxFlex="80px"></mat-header-cell>
@@ -10,7 +10,7 @@
 
   <!-- Name Column -->
   <ng-container matColumnDef="name">
-    <mat-header-cell *matHeaderCellDef fxFlex="280px">Name</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef fxFlex="280px" mat-sort-header>Name</mat-header-cell>
     <mat-cell *matCellDef="let user" fxFlex="280px">
       <p class="text-truncate font-weight-600">{{user.firstName}} {{user.lastName}}</p>
     </mat-cell>
@@ -18,7 +18,7 @@
 
   <!-- Email Column -->
   <ng-container matColumnDef="email">
-    <mat-header-cell *matHeaderCellDef fxFlex="280px">Email</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef fxFlex="280px" mat-sort-header>Email</mat-header-cell>
     <mat-cell *matCellDef="let user" fxFlex="280px">
       <p class="email text-truncate">
         {{user.email}}
@@ -28,7 +28,7 @@
 
   <!-- Phone Column -->
   <ng-container matColumnDef="phone">
-    <mat-header-cell *matHeaderCellDef fxFlex="280px">Phone</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef fxFlex="280px" mat-sort-header>Phone</mat-header-cell>
     <mat-cell *matCellDef="let user" fxFlex="280px">
       <p class="phone text-truncate">
         {{user.phone}}
@@ -38,7 +38,7 @@
 
   <!-- Buttons Column -->
   <ng-container matColumnDef="buttons">
-    <mat-header-cell *matHeaderCellDef></mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header></mat-header-cell>
     <mat-cell *matCellDef="let contact">
       <div fxFlex="row" fxLayoutAlign="end center">
         <mat-menu #moreMenu="matMenu">
