--- a/src/app/users/users-table/users-table.component.scss
+++ b/src/app/users/users-table/users-table.component.scss
@@ -6,6 +6,7 @@
   background: transparent;
   box-shadow: none;
   overflow: auto;
+  height: calc(100vh - 150px);
 
   .mat-column-checkbox {
     flex: 0 1 64px;
@@ -18,6 +19,13 @@
 
   .mat-column-buttons {
     flex: 0 1 80px;
+  }
+
+  .mat-header-row {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background-color: #fff;
   }
 
   .mat-row {
@@ -53,4 +61,8 @@
     top: calc(100vh - 72px);
     bottom: auto;
   }
+}
+
+.contact {
+  width: 920px;
 }
