--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,8 +1,8 @@
 <div id="contacts" class="page-layout simple left-sidebar inner-sidebar inner-scroll">
 
   <!-- HEADER -->
-  <div class="header mat-primary-bg p-16 p-sm-24" fxLayout="column" fxLayoutAlign="start start"
-       fxLayout.gt-xs="row" fxLayoutAlign.gt-xs="space-between center">
+  <div class="header mat-primary-bg p-16 p-sm-24"
+       fxLayout="row" fxLayoutAlign="space-between center">
 
     <!-- APP TITLE -->
     <div fxLayout="row" fxLayoutAlign="start center">
@@ -11,8 +11,8 @@
         <mat-icon class="logo-icon mr-16">account_box
         </mat-icon>
         <span class="logo-text h1">
-                    Contacts
-                </span>
+                    Users
+        </span>
       </div>
 
     </div>
@@ -37,10 +37,10 @@
   <div class="content">
 
     <!-- CENTER -->
-    <div class="center p-24 pb-56 pr-sm-92" fxLayoutAlign="center">
+    <div class="center " fxLayoutAlign="center">
 
       <!-- CONTENT -->
-      <div class="content mat-white-bg mat-elevation-z4" fxFlex="920px">
+      <div class="content mat-white-bg mat-elevation-z4 users-list">
         <app-users-table [users]="users"></app-users-table>
       </div>
       <!-- / CONTENT -->
