--- a/src/scss/partials/_reset.scss
+++ b/src/scss/partials/_reset.scss
@@ -24,6 +24,7 @@ html, body {
     margin: 0;
     width: 100%;
     height: 100%;
+  overflow: hidden;
 }
 
 // Reset non angular-material input's default browser/os styles
