--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -11,7 +11,7 @@
         <mat-icon class="logo-icon mr-16">account_box
         </mat-icon>
         <span class="logo-text h1">
-                    Users
+            {{'users.title' | translate}}
         </span>
       </div>
 
@@ -24,7 +24,7 @@
         <mat-icon>search</mat-icon>
       </label>
       <mat-form-field mat-no-float class="m-0" floatLabel="never">
-        <input matInput [formControl]="searchForm.controls.search" id="search" placeholder="Search for anything">
+        <input matInput [formControl]="searchForm.controls.search" id="search" [placeholder]="'users.searchPlaceholder' | translate">
       </mat-form-field>
     </div>
     <!-- / SEARCH -->
