--- a/src/app/realty/realty-favorite-list/realty-favorite-list.component.scss
+++ b/src/app/realty/realty-favorite-list/realty-favorite-list.component.scss
@@ -2,6 +2,16 @@
   display: none;
 }
 
+#realty-container {
+  height: calc(100vh - 170px);
+  overflow: scroll !important;
+}
+
+.realty-filter {
+  position: sticky;
+  top: 0;
+}
+
 @media only screen and (max-width: 768px) {
   .filter-btn {
     display: block;
